--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -209,7 +209,7 @@ jobs:
     name: Deploy to Production
     environment:
       name: production
-      url: https://jlgonzales123.github.io/calculator-demo-app
+      url: https://jlgonzales123.github.io/calculator-demo-app-staging
 
     steps:
       - name: Deploy to GitHub Pages (Production)
