--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -35,7 +35,7 @@ jobs:
         with:
           path: docs  # Use whatever folder appears after build
 
-      # - name: Upload Pages artifact (static site)
+      #   name: Upload Pages artifact (static site)
       #   uses: actions/upload-pages-artifact@v3
       #   with:
       #     path: src
